# FerrumGrid

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  PROGRESS.md  README.md  dist-workspace.toml  docker-compose.test.yml  justfile  plan-mainViewFeatureCompletion.prompt.md  rust-toolchain.toml  seed.sql
.claude/: settings.local.json
.github/workflows/: ci.yml  dmg.yml  release-linux-arm64.yml  release.yml
FerrumGrid.app/Contents/: Info.plist
assets/: AppIcon.icns
bench/: baseline.json
benches/: baseline.rs
design/: erd-semantic-zoom-redesign.md
docs/: app.js  index.html  style.css
scripts/: build-dmg.sh  create-local-app.sh  generate-icns.sh  generate_dmg_background.py  generate_gradient_icons.py  make_transparent.py
src/: app.rs  app_icon.rs  connection_url.rs  dock_menu.rs  korean_keyboard.rs  main.rs  menu.rs  native_menu.rs  state.rs  types.rs  updater.rs
src/ai/: mod.rs  schema.rs  service.rs
src/automation/: mod.rs  runner.rs  scheduler.rs
src/bi/: aggregate.rs  card.rs  mod.rs
src/db/: backup.rs  backup_fgb.rs  backup_sql.rs  begin_detect.rs  bridge.rs  catalog.rs  connection.rs  dangling_tx.rs  ddl.rs  ddl_create.rs  dependencies.rs  edits.rs  error.rs  explain.rs  iam.rs  import.rs  introspect.rs  invalidate.rs  metadata.rs  metadata_fk.rs  mod.rs  privileges.rs  queries.rs  row_key.rs  schema_diff.rs  schema_diff_exec.rs  sessions.rs  ssh_tunnel.rs  test_data.rs  transfer.rs  transfer_exec.rs
src/i18n/: mod.rs
src/plugin/: mod.rs
src/prisma/: cli.rs  mod.rs  parser.rs  prisma.pest  sync.rs  ui.rs
src/state/: data_edit.rs  designer.rs  migration.rs  mod.rs  query.rs  transfer.rs
src/storage/: automation.rs  backups.rs  connections.rs  history.rs  mod.rs  settings.rs  snippets.rs  vault.rs
src/ui/: about.rs  ai_assist_dialog.rs  backup_dialogs.rs  catalog_window.rs  command_palette.rs  diagnostics_panel.rs  dialogs.rs  drop_dialog.rs  editor.rs  er_diagram.rs  explain_window.rs  grid.rs  grid_dispatch.rs  icons.rs  icons_svg.rs  migration_wizard.rs  mod.rs  monitoring.rs  objects.rs  panels.rs  privileges_window.rs  schema_diff_window.rs  session_monitor.rs  sessions_window.rs  settings.rs  snippet_save_dialog.rs  table_designer.rs  theme.rs  titlebar.rs  transfer_dialog.rs  tree_browser.rs  vault.rs
src/ui/grid/: cell_overlay.rs  data_ops.rs  date_picker.rs  footer.rs  header.rs  hit_test.rs  info_panel.rs  info_row.rs  json_editor.rs  mod.rs  object_info.rs  pager.rs  paste.rs  render.rs  selection.rs  table_info.rs  table_render.rs  toolbar.rs  tooltips.rs
src/ui/objects/: automation.rs  backup.rs  bi.rs  functions.rs  mod.rs  model.rs  roles.rs  tables.rs  views.rs
tests/: ctid_opt_in.rs  dangling_tx.rs  drop_cascade.rs  edits_atomicity.rs  grid_state_surface.rs  pk_strategy.rs  postgres_seed.rs  tracing_assert_smoke.rs
tests/support/: tracing_assert.rs
wix/: main.wxs
