[package]
name = "ferrumgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = "0.31"
egui_extras = { version = "0.31", features = ["default"] }
egui-notify = "0.19"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
native-tls = "0.2"
postgres-native-tls = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Credential storage
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }

# App directories
directories = "5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# Export
csv = "1.3"
rfd = "0.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
