[package]
name = "ferrumgrid"
version = "0.1.1"
edition = "2021"
authors = ["Stormix <stormixus@gmail.com>"]
description = "A modern PostgreSQL desktop client built in Rust"
license = "MIT"
repository = "https://github.com/stormixus/FerrumGrid"
homepage = "https://github.com/stormixus/FerrumGrid"

[package.metadata.wix]
upgrade-guid = "34FCF08A-72D3-4374-BE95-9CC99E8C7CA1"
path-guid = "DE8E2603-45F6-4ADC-BA18-66781F46CB78"
license = false
eula = false

[dependencies]
# GUI
eframe = "0.31"
egui_extras = { version = "0.31", features = ["default", "svg", "image"] }
egui-notify = "0.19"
muda = "0.17"
winit = "0.30"

# Prisma schema parsing
pest = "2.7"
pest_derive = "2.7"

# i18n
lazy_static = "1.4"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "process"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
futures-util = "0.3"
postgres-types = { version = "0.2", features = ["derive"] }
native-tls = "0.2"
postgres-native-tls = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Vault crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1.8"

# App directories
directories = "5"

# Utilities
arboard = { version = "3.6", default-features = false }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
url = "2.5"

# Export
csv = "1.3"
rfd = "0.15"

# Update check (GitHub Releases API)
ureq = { version = "2.10", default-features = false, features = ["native-tls", "json"] }
semver = "1"

# macOS native integration
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSRunningApplication"] }
block2 = "0.6"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "fmt"] }

[[bench]]
name = "baseline"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
